<resources>
    <string name="app_name">What\'s Teddy\'s Name</string>
    <string name="title_1">What\'s</string>
    <string name="title_2">Teddy\'s</string>
    <string name="title_3">Name?</string>
    <string name="log_in_description">Click here to log in.</string>
    <string name="log_in_text">Log In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="sign_up_description">Click here to sign up.</string>
    <string name="login_title">What\'s Teddy\'s Name?</string>
    <string name="input_username_hint">Username</string>
    <string name="input_email_hint">Email</string>
    <string name="input_password_hint">Password</string>
    <string name="input_confirm_password_hint">Confirm Password</string>
    <string name="create_account_text">Create Account</string>
    <string name="already_a_member_text">Already a member? Login</string>
    <string name="confirm_code_text">Enter confirmation code:</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="collection_title">My Collection</string>
    <string name="splash_loading_text">Loading...</string>
    <string name="splash_title">What\'s Teddy\'s Name?</string>
    <string name="add_button_text">+</string>
    <string name="insert_item_image_here">Insert Item Image Here</string>
    <string name="add_item_title">Add Item</string>
    <string name="add_item_description">Description</string>
    <string name="add_item_name">Name</string>
    <string name="add_item_btn_title">Add Item</string>
    <string name="item_image_des">Item Image</string>
    <string name="view_delete_item_txt">Delete</string>
    <string name="view_item_edit_text">Edit</string>
    <string name="save_changes">Save Changes</string>
    <string name="search_bar_text">Search...</string>
    <string name="search_by_camera_text">Search By Camera</string>
    <string name="result_from_search">Result from search:</string>
    <string name="options">Options</string>
    <string name="add_item">Add Item</string>
    <string name="log_out">Sign Out</string>
    <string name="enter_confirmation_code">Enter confirmation code</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="please_enter_the_username">Please enter the username:</string>
</resources>
