<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wtnbg"
    tools:context="com.example.bryan.whatsteddysname.activities.ForgotPasswordActivity"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/resetPassTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPassTitle"
        app:layout_constraintVertical_bias="1.0">

        <!-- Confirmation code Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="32dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_reset_code"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_confirmation_code"
                android:inputType="number"
                android:textCursorDrawable="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <!-- New Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Confirm New Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_confirm_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Reset Password Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/resetPassBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="#2B3AAC"
            android:padding="12dp"
            android:text="@string/reset_password"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
