<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bryan.whatsteddysname.Item">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/delete_item_btn"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/view_delete_item_txt"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark" />

        <ImageView
            android:id="@+id/view_item_img"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/item_image_content_des"
            app:srcCompat="@android:color/transparent"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="113dp" />

        <TextView
            android:id="@+id/view_item_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:labelFor="@+id/view_item_name_field"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/view_item_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textSize="20sp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <Button
                android:id="@+id/edit_name_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_item_edit_text"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/view_item_des_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:text="@string/add_item_description"
            android:textSize="20sp"
            android:textStyle="bold"
            android:labelFor="@+id/view_item_des_field"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/view_item_des_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:ems="10"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="4"
                android:singleLine="true"
                android:textSize="20sp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <Button
                android:id="@+id/edit_des_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_item_edit_text"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/save_item_changes_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/save_changes"
            android:textAlignment="center"
            android:textSize="16sp"
            android:visibility="invisible" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
